RESOLVED FIXED195583
[Mac] Ensure Apple Pay is unavailable when PassKit.framework is missing
https://bugs.webkit.org/show_bug.cgi?id=195583
Summary [Mac] Ensure Apple Pay is unavailable when PassKit.framework is missing
Andy Estes
Reported 2019-03-11 17:06:03 PDT
[Mac] Ensure Apple Pay is unavailable when PassKit.framework is missing
Attachments
Patch (4.81 KB, patch)
2019-03-11 17:10 PDT, Andy Estes
dbates: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews124 for ios-simulator-wk2 (2.85 MB, application/zip)
2019-03-11 22:58 PDT, EWS Watchlist
no flags
Andy Estes
Comment 1 2019-03-11 17:06:16 PDT
Andy Estes
Comment 2 2019-03-11 17:10:47 PDT
Daniel Bates
Comment 3 2019-03-11 19:25:40 PDT
Comment on attachment 364316 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=364316&action=review > Source/WebKit/ChangeLog:10 > + Partition. We need to check if the framework is available before calling into it. We shipped like this :(
EWS Watchlist
Comment 4 2019-03-11 22:58:44 PDT
Comment on attachment 364316 [details] Patch Attachment 364316 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/11467672 New failing tests: imported/w3c/web-platform-tests/webrtc/simplecall.https.html
EWS Watchlist
Comment 5 2019-03-11 22:58:47 PDT
Created attachment 364354 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Andy Estes
Comment 6 2019-03-12 08:07:23 PDT
Note You need to log in before you can comment on or make changes to this bug.